--- a/.env.dev
+++ b/.env.dev
@@ -1,1 +1,8 @@
 PORT=6354
+PORT_GRAPHQL=3013
+PORT_REALTIME=4040
+
+GRAPHQL_BASE=postgres://monkey:monkey2018@172.17.0.1:5432
+GRAPHQL_DATABASES=tests
+GRAPHQL_SCHEMAS=public,apps,codes,banks,sales
+
