--- a/.env.dev
+++ b/.env.dev
@@ -6,3 +6,4 @@ GRAPHQL_BASE=postgres://monkey:monkey2018@172.17.0.1:5432
 GRAPHQL_DATABASES=tests
 GRAPHQL_SCHEMAS=public,apps,codes,banks,sales
 
+ENDPOINT_GRAPHQL=http://localhost:3013/api/graphql
